<resources>
    <string name="app_name">Randomizer</string>
    <!--Start-->
    <string name="tvRandomizer">Randomizer</string>
    <string name="tvStart">Start</string>
    <string name="tvExit">Exit</string>
    <!--Kind-->
    <string name="ibtnNumeric">Numeric</string>
    <string name="ibtnObjects">Objects</string>
    <string name="tvBorderKind">--------------------------------------------------------------------</string>
    <!--Input-->
    <string name="btnAdd">Добавить</string>
    <string name="btnRandom">Random</string>
    <string name="etInput">Ввод</string>
    <!--Result-->
    <string name="btnResult">Еще раз</string>
    <!--Menu-->
    <string name="menu_list">Показать список</string>
    <!--Range-->
    <string name="tvRangeTitle">Введи диапазон чисел</string>
    <string name="teRangeFrom">ОТ:</string>
    <string name="teRangeTo">ДО:</string>

</resources>
