<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/tvRangeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvRange"
        android:textSize="30sp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etRangeFrom"
        android:hint="@string/teRangeFrom"
        android:textSize="30sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etRangeTo"
        android:textSize="30sp"
        android:hint="@string/teRangeTo" />

</LinearLayout>