<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.igor.randomizer.InputActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/etInput"
        android:layout_weight="30"
        android:textSize="50sp"
        android:hint="@string/etInput"
        android:textStyle="normal|italic" />

    <Button
        android:text="@string/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAdd"
        android:layout_weight="30"
        android:textSize="50sp"
        android:textAllCaps="false" />

    <Button
        android:text="@string/btnRandom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRandom"
        android:layout_weight="30"
        android:textSize="50sp"
        android:textStyle="normal|bold" />
</LinearLayout>
