<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_kind"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.igor.randomizer.KindActivity"
    android:orientation="vertical">

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/btn_numeric"
        android:id="@+id/ibtnNumeric"
        android:contentDescription="@string/ibtnNumeric"
        android:background="?android:attr/selectableItemBackground" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvBorderKind"
        android:text="@string/tvBorderKind"
        android:textAlignment="center" />

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/btn_objects"
        android:id="@+id/ibtnObjects"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/ibtnObjects" />
</LinearLayout>
