<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.igor.randomizer.StartActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvOtstupVerh"
            android:textSize="60sp" />

        <TextView
            android:text="@string/tvRandomizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRandomizer"
            android:gravity="center"
            android:textSize="50sp"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="290dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvOtstupStart"
                android:textSize="100sp" />

            <TextView
                android:text="@string/tvStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvStart"
                android:textSize="50sp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvOtstupExit"
                android:textSize="25sp" />

            <TextView
                android:text="@string/tvExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvExit"
                android:textSize="50sp"
                android:textAlignment="center" />
        </LinearLayout>
</LinearLayout>
